<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data class="ReturnToBaseFragmentBinding">
        <variable
                name="currentWaybillViewModel"
                type="com.tetron.waybill.viewmodel.CurrentWaybillViewModel"/>
    </data>

    <LinearLayout
            android:id="@+id/llReturnToBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/ivReturnToBaseIcon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ellipse"
                android:layout_margin="@dimen/default_element_margin_horizontal"
                android:layout_gravity="center_horizontal|center_vertical"
                tools:ignore="ContentDescription"/>

        <TextView
                android:id="@+id/tvReturnToBaseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_element_margin_horizontal"
                android:text="@string/tv_return_to_base_title"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textAllCaps="true"/>

        <TextView
                android:id="@+id/tvReturnToBaseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_element_margin_horizontal"
                android:text="@string/return_to_base_description"
                android:gravity="center_horizontal"/>

        <Button
                android:id="@+id/btnReturnedToBase"
                android:enabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="@dimen/default_element_margin_horizontal"
                android:text="@string/btn_returned_to_base"
                android:textAllCaps="false"/>

    </LinearLayout>

</layout>